--- a/pages/events.html
+++ b/pages/events.html
@@ -3,9 +3,19 @@ layout: default
 title: Events
 permalink: /events/
 weight: 1
-remote_projects: 
-  - git-for-wizards
-  - arduino-visitor-counter
 ---
+
+# **Events**
+
+Participating in events like WebSummit and Google I/O holds immense professional significance.
+
+I consider it important to participate in work-related events, for several reasons:<br>
+1. First, they provide a direct avenue to stay updated with industry trends.
+2. Second, events facilitate networking opportunities with industry leaders, potential collaborators, and peers who share your passion.
+3. Witnessing breakthroughs and innovations firsthand sparks creativity and offers fresh perspectives for problem-solving.
+4. Workshops, presentations, and discussions offer a wealth of knowledge and enable one to expand your skill set and expertise.
+5. Market insights garnered from these gatherings empower one to make informed business decisions, while also validating ideas through direct audience feedback.
+6. Attending industry events is a dynamic investment in your professional development, providing a holistic approach to learning, networking, and innovation.
+These experiences are pivotal in staying competitive, relevant, and inspired in today's rapidly evolving business landscape.
 
 {% include about/timeline.html %}
