--- a/pages/events.html
+++ b/pages/events.html
@@ -5,17 +5,19 @@ permalink: /events/
 weight: 4
 ---
 
-# **Events**
+# **About Me**
 
-Participating in events like WebSummit and Google I/O holds immense professional significance.
+##### Hi I am **{{ site.author.name }}** :wave:<br>
+Android Engineer with more than 5 years of experience in Android Development.<br>
+I love helping others and keeping up to speed on new developments in the industry.<br>
+I have a track record of creating tools to help teams improve both their efficiency and output quality.<br>
+I love traveling ✈️, eating good food, and playing sports, like Padel or Tennis 🎾
 
-I consider it important to participate in work-related events, for several reasons:<br>
-1. First, they provide a direct avenue to stay updated with industry trends.
-2. Second, events facilitate networking opportunities with industry leaders, potential collaborators, and peers who share your passion.
-3. Witnessing breakthroughs and innovations firsthand sparks creativity and offers fresh perspectives for problem-solving.
-4. Workshops, presentations, and discussions offer a wealth of knowledge and enable one to expand your skill set and expertise.
-5. Market insights garnered from these gatherings empower one to make informed business decisions, while also validating ideas through direct audience feedback.
-6. Attending industry events is a dynamic investment in your professional development, providing a holistic approach to learning, networking, and innovation.
-These experiences are pivotal in staying competitive, relevant, and inspired in today's rapidly evolving business landscape.
+<div class="row">
+{% include about/skills.html title="Programming Skills" source=site.data.programming-skills %}
+{% include about/skills.html title="Other Skills" source=site.data.other-skills %}
+</div>
 
+<div class="row">
 {% include about/timeline.html %}
+</div>
